Add commented out --sun-misc-unsafe-memory-access option needed for JDK >= 24